# argos3-osoyoo

./: CMakeLists.txt  README.md
argos3/: CMakeLists.txt
argos3/plugins/robots/: CMakeLists.txt
argos3/plugins/robots/osoyoo/: CMakeLists.txt
argos3/plugins/robots/osoyoo/control_interface/: ci_osoyoo_base_ground_sensor.cpp  ci_osoyoo_base_ground_sensor.h  ci_osoyoo_colored_blob_omnidirectional_camera_sensor.cpp  ci_osoyoo_colored_blob_omnidirectional_camera_sensor.h  ci_osoyoo_encoder_sensor.cpp  ci_osoyoo_encoder_sensor.h  ci_osoyoo_imu_sensor.cpp  ci_osoyoo_imu_sensor.h  ci_osoyoo_lidar_sensor.cpp  ci_osoyoo_lidar_sensor.h  ci_osoyoo_proximity_sensor.cpp  ci_osoyoo_proximity_sensor.h  ci_osoyoo_ultrasonic_sensor.cpp  ci_osoyoo_ultrasonic_sensor.h
argos3/plugins/robots/osoyoo/simulator/: dynamics2d_osoyoo_model.cpp  dynamics2d_osoyoo_model.h  dynamics3d_osoyoo_model.cpp  dynamics3d_osoyoo_model.h  osoyoo_base_ground_rotzonly_sensor.cpp  osoyoo_base_ground_rotzonly_sensor.h  osoyoo_colored_blob_omnidirectional_camera_rotzonly_sensor.cpp  osoyoo_colored_blob_omnidirectional_camera_rotzonly_sensor.h  osoyoo_encoder_sensor.cpp  osoyoo_encoder_sensor.h  osoyoo_entity.cpp  osoyoo_entity.h  osoyoo_imu_equipped_entity.cpp  osoyoo_imu_equipped_entity.h  osoyoo_imu_sensor.cpp  osoyoo_imu_sensor.h  osoyoo_lidar_default_sensor.cpp  osoyoo_lidar_default_sensor.h  osoyoo_measures.cpp  osoyoo_measures.h  osoyoo_proximity_default_sensor.cpp  osoyoo_proximity_default_sensor.h  osoyoo_ultrasonic_default_sensor.cpp  osoyoo_ultrasonic_default_sensor.h  qtopengl_osoyoo.cpp  qtopengl_osoyoo.h
argos3/testing/controllers/: CMakeLists.txt
argos3/testing/controllers/osoyoo_test/: CMakeLists.txt  osoyoo_test.cpp  osoyoo_test.h
argos3/testing/experiments/: osoyoo_test.argos
argos3/testing/loop_functions/test_loop_functions/: CMakeLists.txt
scripts/: rename_cmake_tokens.sh  rename_robot.sh  rename_robot_tokens.sh  rename_test_tokens.sh
